--- a/hackathon/MK/NeuronStructNavigator/NeuronStructNavigator.vcxproj
+++ b/hackathon/MK/NeuronStructNavigator/NeuronStructNavigator.vcxproj
@@ -21,7 +21,7 @@
     <OutputDirectory>.\</OutputDirectory>
     <ATLMinimizesCRunTimeLibraryUsage>false</ATLMinimizesCRunTimeLibraryUsage>
     <CharacterSet>NotSet</CharacterSet>
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <IntermediateDirectory>debug\</IntermediateDirectory>
     <PrimaryOutput>NeuronStructNavigator</PrimaryOutput>
   </PropertyGroup>
@@ -33,7 +33,6 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <IntermediateDirectory>release\</IntermediateDirectory>
     <PrimaryOutput>NeuronStructNavigator</PrimaryOutput>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings" />
@@ -53,10 +52,6 @@
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">release\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NeuronStructNavigator</TargetName>
     <IgnoreImportLibrary Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</IgnoreImportLibrary>
-    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <TargetExt>.lib</TargetExt>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -69,7 +64,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <ObjectFileName>debug\</ObjectFileName>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;QT_DEPRECATED_WARNINGS;QT_DLL;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;_CRT_SECURE_NO_WARNINGS;QT_DEPRECATED_WARNINGS;QT_STATICPLUGIN;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessToFile>false</PreprocessToFile>
       <ProgramDataBaseFileName>.\</ProgramDataBaseFileName>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -79,15 +74,7 @@
       <WarningLevel>TurnOffAllWarnings</WarningLevel>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>d:\Qt\4.8.6\lib\QtCored4.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>d:\Qt\4.8.6\lib;D:\boostLibs\boost_1_72_0/lib64-msvc-12.0;D:\Qt\4.8.6/lib;../../../../v3d_external/v3d_main/common_lib/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <DataExecutionPrevention>true</DataExecutionPrevention>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreImportLibrary>true</IgnoreImportLibrary>
-      <LinkDLL>true</LinkDLL>
-      <OutputFile>$(OutDir)\NeuronStructNavigator.dll</OutputFile>
-      <RandomizedBaseAddress>true</RandomizedBaseAddress>
-      <SuppressStartupBanner>true</SuppressStartupBanner>
     </Link>
     <Midl>
       <DefaultCharType>Unsigned</DefaultCharType>
@@ -95,12 +82,13 @@
       <WarningLevel>0</WarningLevel>
     </Midl>
     <ResourceCompile>
-      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;QT_DEPRECATED_WARNINGS;QT_DLL;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;_CRT_SECURE_NO_WARNINGS;QT_DEPRECATED_WARNINGS;QT_STATICPLUGIN;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ResourceOutputFileName>$(OutDir)\$(InputName).res</ResourceOutputFileName>
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>%QTDIR%\include\QtCore;%QTDIR%\include;..\..\..\..\v3d_external\v3d_main\basic_c_fun;..\v3d_imgManagerMK;..\v3d_imgManagerMK\imgProcessor;..\v3d_imgManagerMK\imgAnalyzer;..\..\..\..\v3d_external\v3d_main\neuron_editing;..\..\..\..\v3d_external\v3d_main\common_lib\include;..\..\..\released_plugins\v3d_plugins\swc2mask_cylinder;%BOOST_PATH%;%QTDIR%\include\QtGui;%QTDIR%\include\ActiveQt;release;%QTDIR%\mkspecs\win32-msvc2013;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>"d:\Qt\4.8.6\include\QtCore";"d:\Qt\4.8.6\include";"..\..\..\..\v3d_external\v3d_main\basic_c_fun";"..\v3d_imgManagerMK";"..\v3d_imgManagerMK\imgProcessor";"..\v3d_imgManagerMK\imgAnalyzer";"..\..\..\..\v3d_external\v3d_main\neuron_editing";"..\..\..\..\v3d_external\v3d_main\common_lib\include";"..\..\..\released_plugins\v3d_plugins\swc2mask_cylinder";"d:\boostLibs\boost_1_72_0";"d:\Qt\4.8.6\include";"d:\Qt\4.8.6\include\QtGui";"d:\Qt\4.8.6\include\QtCore";"d:\Qt\4.8.6\include\ActiveQt";"release";d:\Qt\4.8.6\mkspecs\win32-msvc2013;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>-Zm200 -FS %(AdditionalOptions)</AdditionalOptions>
       <AssemblerListingLocation>release\</AssemblerListingLocation>
       <BrowseInformation>false</BrowseInformation>
@@ -108,7 +96,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <ObjectFileName>release\</ObjectFileName>
       <Optimization>MaxSpeed</Optimization>
-      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;QT_DEPRECATED_WARNINGS;QT_DLL;QT_NO_DEBUG;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;NDEBUG;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;_CRT_SECURE_NO_WARNINGS;QT_DEPRECATED_WARNINGS;QT_NO_DEBUG;QT_STATICPLUGIN;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessToFile>false</PreprocessToFile>
       <ProgramDataBaseFileName>.\</ProgramDataBaseFileName>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
@@ -116,20 +104,12 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
       <WarningLevel>Level2</WarningLevel>
-      <SDLCheck>false</SDLCheck>
+      <SDLCheck>true</SDLCheck>
+      <WholeProgramOptimization>true</WholeProgramOptimization>
       <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>d:\Qt\4.8.6\lib\QtCore4.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>d:\Qt\4.8.6\lib;D:\boostLibs\boost_1_72_0/lib64-msvc-12.0;D:\Qt\4.8.6/lib;../../../../v3d_external/v3d_main/common_lib/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <DataExecutionPrevention>true</DataExecutionPrevention>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
       <IgnoreImportLibrary>true</IgnoreImportLibrary>
-      <LinkDLL>true</LinkDLL>
-      <LinkIncremental>false</LinkIncremental>
-      <OutputFile>$(OutDir)\NeuronStructNavigator.dll</OutputFile>
-      <RandomizedBaseAddress>true</RandomizedBaseAddress>
-      <SuppressStartupBanner>true</SuppressStartupBanner>
     </Link>
     <Midl>
       <DefaultCharType>Unsigned</DefaultCharType>
@@ -137,7 +117,8 @@
       <WarningLevel>0</WarningLevel>
     </Midl>
     <ResourceCompile>
-      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;QT_DEPRECATED_WARNINGS;QT_DLL;QT_NO_DEBUG;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;UNICODE;WIN32;NEURONSTRUCTNAVIGATOR_LIBRARY;_CRT_SECURE_NO_WARNINGS;QT_DEPRECATED_WARNINGS;QT_NO_DEBUG;QT_STATICPLUGIN;QT_PLUGIN;QT_CORE_LIB;QT_HAVE_MMX;QT_HAVE_3DNOW;QT_HAVE_SSE;QT_HAVE_MMXEXT;QT_HAVE_SSE2;QT_THREAD_SUPPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ResourceOutputFileName>$(OutDir)\$(InputName).res</ResourceOutputFileName>
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -146,12 +127,13 @@
     <ClCompile Include="NeuronStructNavigatingTester.cpp" />
     <ClCompile Include="NeuronStructUtilities.cpp" />
     <ClCompile Include="TreeGrower.cpp" />
+    <ClCompile Include="TreeKeeper.cpp" />
+    <ClCompile Include="TreeTrimmer.cpp" />
     <ClCompile Include="..\..\..\..\v3d_external\v3d_main\basic_c_fun\basic_surf_objs.cpp" />
     <ClCompile Include="integratedDataTypes.cpp" />
     <ClCompile Include="..\..\..\..\v3d_external\v3d_main\neuron_editing\neuron_format_converter.cpp" />
     <ClCompile Include="..\..\..\..\v3d_external\v3d_main\basic_c_fun\v3d_message.cpp" />
     <ClCompile Include="..\..\..\..\v3d_external\v3d_main\neuron_editing\v_neuronswc.cpp" />
-    <ClCompile Include="TreeTrimmer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NeuronGeoGrapher.h" />
@@ -160,11 +142,12 @@
     <ClInclude Include="NeuronStructNavigator_Define.h" />
     <ClInclude Include="NeuronStructUtilities.h" />
     <ClInclude Include="TreeGrower.h" />
+    <ClInclude Include="TreeKeeper.h" />
+    <ClInclude Include="TreeTrimmer.h" />
     <ClInclude Include="integratedDataTypes.h" />
     <ClInclude Include="..\..\..\released_plugins\v3d_plugins\swc2mask_cylinder\my_surf_objs.h" />
     <ClInclude Include="..\..\..\..\v3d_external\v3d_main\basic_c_fun\v3d_message.h" />
     <ClInclude Include="..\..\..\..\v3d_external\v3d_main\neuron_editing\v_neuronswc.h" />
-    <ClInclude Include="TreeTrimmer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
